mise en place du caroussel et du formulaire

--- a/lessons.html
+++ b/lessons.html
@@ -64,7 +64,7 @@
       </div>
       <div class="row">
         <div class="col-12 col-lg-4">
-          <div class="card">
+          <div class="card mb-4 mb-lg-0 shadow">
             <img
               src="ressources/css.jpeg"
               alt="Animations CSS modernes"
@@ -74,29 +74,31 @@
               <h5 class="card-title">Créez des animations CSS</h5>
               <p class="card-text">
                 Vous allez plonger dans le monde des animations CSS pour donner
-                vie à vos pages web ! <a  href="lessons-1.html">Lessons-1</a>
+                vie à vos pages web ! 
               </p>
+              <a href="lessons-1.html" class="btn btn-primary streched-link">Démarrer l'apprentissage</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
-          <div class="card">
+          <div class="card mb-4 mb-lg-0 shadow ">
             <img
               src="ressources/js.jpeg"
               alt="Programmation JavaScript"
               class="card-img-top"
             />
             <div class="card-body">
-              <h5 class="card-title">Programmer avec JavaScript</h5>
+              <h5 class="card-title">Programmer avec JS</h5>
               <p class="card-text">
                 Ce cours est conçu pour vous enseigner les bases du langage de
                 programmation JavaScript.
               </p>
+              <a href="#" class="btn btn-primary streched-link">Démarrer l'apprentissage</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-4">
-          <div class="card">
+          <div class="card mb-4 mb-lg-0 shadow">
             <img
               src="ressources/swift.jpeg"
               alt="Programmation Swift"
@@ -108,14 +110,15 @@
                 Découvrez le développement iOS et réalisez des applications
                 taillées pour l'iPhone et l'iPad !
               </p>
+              <a href="#" class="btn btn-primary streched-link">Démarrer l'apprentissage</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="bg-light">
-      <div class="container">
-        <div class="row">
+    <!-- <div class="bg-light"> -->
+      <div class="container bg-light mt-lg-4">
+        <div class="row pt-3 pb-1">
           <div class="col">
             <ul class="list-inline text-center">
               <li class="list-inline-item"><a href="#">À propos</a></li>
