--- a/index.html
+++ b/index.html
@@ -56,16 +56,62 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row my-3">
         <div class="col">
-          <div class="jumbotron">
+          <!-- <div class="jumbotron">
             <h1>Bienvenue sur Info School</h1>
+          </div> -->
+          <div
+            id="carouselControls"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="ressources/carousel/apprenant.jpg"
+                  alt="apprenant"
+                  class="d-block w-100"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="ressources/carousel/apprenant2.jpg"
+                  alt="un autre apprenant"
+                  class="d-block w-100"
+                />
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselControls"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Précédent</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselControls"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Suivant</span>
+            </a>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row my-3 my-lg-0">
         <div class="col-12 col-lg-4">
-          <div class="card">
+          <div class="card shadow">
             <img
               src="ressources/certificate.png"
               alt="certificate"
@@ -79,8 +125,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4">
-          <div class="card">
+        <div class="col-12 col-lg-4 my-3 my-lg-0">
+          <div class="card shadow">
             <img
               src="ressources/instruction.png"
               alt="instruction"
@@ -95,7 +141,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-4">
-          <div class="card">
+          <div class="card shadow">
             <img src="ressources/job.png" alt="job" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title">Un travail garanti</h5>
@@ -108,7 +154,7 @@
       </div>
       <!-- FOOTER -->
       <div class="container bg-light">
-        <div class="row">
+        <div class="row pt-3 pb-1 mt-3">
           <div class="col">
             <ul class="list-inline text-center">
               <li class="list-inline-item"><a href="#"> A propos</a></li>
