--- a/lessons-1.html
+++ b/lessons-1.html
@@ -18,65 +18,80 @@
   </head>
 
   <body>
-    <div class="bg-dark">
-      <div class="container">
-        <div class="row">
-          <nav class="col navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">
-              <img
-                src="ressources/logo.png"
-                width="50"
-                height="50"
-                alt="Info Logo"
-              />
-              Info School
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="navbarContent" class="collapse navbar-collapse">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Accueil</a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="lessons.html">Cours</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+    <div class="container bg-dark">
+      <div class="row">
+        <nav class="col navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="index.html">
+            <img
+              src="ressources/logo.png"
+              width="50"
+              height="50"
+              alt="Info Logo"
+            />
+            Info School
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="navbarContent" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Accueil</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="lessons.html">Cours</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row mt-3">
         <div class="col">
+          <div
+            class="alert alert-success alert-dismissible fade show"
+            role="alert"
+          >
+            <h5 class="alert-heading">Prérequis</h5>
+            <p>
+              Bases en CSS. Si vous ne les maîtrisez pas, suivez ce cours:
+              <a href="#" class="alert-link">
+                Apprenez à créer votre site web avec HTML5 et CSS3</a
+              >
+            </p>
+            <button
+              class="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
           <h1>Créez des animations CSS</h1>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <div class="embed-responsive embed-responsibe-16by9">
+          <div class="embed-responsive embed-responsive-16by9">
             <iframe
               class="embed-responsive-item"
               src="https://www.youtube.com/embed/lOox4UJVFb4"
-              frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
-            >
-            </iframe>
+            ></iframe>
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         <div class="col">
           <h2>A la fin de ce cours, vous serez capable de :</h2>
           <ul>
@@ -86,21 +101,58 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+        <div class="col">
+          <hr />
+          <h3>Notes</h3>
+          <form>
+            <div class="form-group">
+              <label for="timeInput">Temps : </label>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="mm : ss"
+                id="Heure"
+              />
+            </div>
+            <div class="form-group">
+              <label for="note">Note :</label>
+              <textarea
+                id="note"
+                rows="5"
+                class="form-control"
+                required
+              ></textarea>
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input"
+                  id="publicCheck"
+                />
+                <label for="gridCheck" class="form-check-label"
+                  >Rendre cette notation publique
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Envoyer</button>
+          </form>
+        </div>
+      </div>
     </div>
-    <div class="bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item"><a href="#">À propos</a></li>
-              <li class="list-inline-item">&middot;</li>
-              <li class="list-inline-item"><a href="#">Vie privée</a></li>
-              <li class="list-inline-item">&middot;</li>
-              <li class="list-inline-item">
-                <a href="#">Conditions d'utilisations</a>
-              </li>
-            </ul>
-          </div>
+    <div class="container bg-light mt-3">
+      <div class="row pt-3 pb-1">
+        <div class="col">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item"><a href="#">À propos</a></li>
+            <li class="list-inline-item">&middot;</li>
+            <li class="list-inline-item"><a href="#">Vie privée</a></li>
+            <li class="list-inline-item">&middot;</li>
+            <li class="list-inline-item">
+              <a href="#">Conditions d'utilisations</a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
